[tool.poetry]
name = "n2-find-e-to-nth"
version = "0.1.0"
description = ""
authors = ["nish <nishchup489@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.22"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"